crates/reinhardt-forms/crates/macros/tests/ui/fail/syntax_error_unclosed_brace.stderr
error: this file contains an unclosed delimiter
  --> tests/ui/fail/syntax_error_unclosed_brace.rs:13:3
   |
 7 | fn main() {
   |           - unclosed delimiter
...
10 |             username: CharField {
   |                                 - this delimiter might not be properly closed...
11 |         },
   |         - ...as it matches this but it has different indentation
12 |     };
13 | }
   |  ^
